src/test/deca/context/valid/notYetImplemented/test_pass_2_decl_simpl_method.deca
// Description:
//    Program testing method declar whithout params or body
//
// Results:
//    ok
//
// History:
//    Created on 15/01/2025


class Test{
    void MethodTest(){
	
    }
}
