src/test/deca/context/invalid/test_pass_2_param_type_void.deca
// Description:
//    Program testing pass 2, declare a void param of a method
//
// Results:
//    ok
//
// History:
//    Created on 17/01/2025


class Test{
    void Method(void No){
	
    }
}


